<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:background="@color/GrayishWhite"
    android:isScrollContainer="true"
    tools:context=".dashBoard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="602dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="40sp"
            android:background="@drawable/roundedsquareborrowedtitle"
            android:fontFamily="casual"
            android:hapticFeedbackEnabled="false"
            android:text="@string/StudentInfo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/roundedsquareborrowed"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@mipmap/tempiconloona_foreground" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/buttonshape"
                android:text="@string/seemoreText"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="casual"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="textPersonName"
                android:text="@string/tempName"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginLeft="55dp"
                android:fontFamily="casual"
                android:text="@string/GWATitle"
                android:textColor="@color/pistachio"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="89dp"
                android:layout_marginLeft="89dp"
                android:fontFamily="casual"
                android:text="@string/nameTitle"
                android:textColor="@color/pistachio"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:fontFamily="casual"
                android:text="@string/sectionTitle"
                android:textColor="@color/pistachio"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="198dp"
                android:layout_height="45dp"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:fontFamily="casual"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="textPersonName"
                android:text="@string/tempsection"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="196dp"
                android:layout_height="45dp"
                android:ems="10"
                android:fontFamily="casual"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="textPersonName"
                android:text="@string/tempGWA"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/roundedsquareborrowed"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedsquareborrowedtitle"
                android:fontFamily="casual"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/borrowedTitle"
                android:textSize="15sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/borrowedList"
                        style="@style/Widget.AppCompat.ListView"
                        android:layout_width="match_parent"
                        android:layout_height="198dp" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/roundedsquareborrowed"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedsquareborrowedtitle"
                android:fontFamily="casual"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/amongOtherThing"
                android:textSize="15sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ListView
                        style="@style/Widget.AppCompat.ListView"
                        android:layout_width="match_parent"
                        android:layout_height="198dp" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>